--- a/godtools/en.lproj/Main.storyboard
+++ b/godtools/en.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="OvA-bH-obN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="OvA-bH-obN">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -399,7 +399,7 @@
                         <outlet property="primaryLanguageButton" destination="cW2-xI-6th" id="Icf-JV-Fzr"/>
                         <outlet property="primaryLanguageLabel" destination="MsA-3e-8Np" id="Cr7-50-tMJ"/>
                         <segue destination="YJa-Gt-v9R" kind="push" identifier="settingsToLanguageViewSegue" id="Qqk-3p-fFz"/>
-                        <segue destination="eUe-NG-066" kind="push" id="PlZ-Mg-hcL"/>
+                        <segue destination="eUe-NG-066" kind="push" identifier="settingsToAboutViewSegue" id="PlZ-Mg-hcL"/>
                         <segue destination="bg8-8O-T0Y" kind="modal" identifier="settingsToAccessCodeScreenSegue" id="Jp3-wq-ZDc"/>
                     </connections>
                 </viewController>
